# tg-tui

./: .gitignore  pyproject.toml
tg_tui/: tg.py  tui.py
